zBoolami/bezBoolowParser.py
# Generated from C:/Users/fudal/OneDrive/Dokumenty/GitHub/Genetyczne\bezBoolow.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class bezBoolowParser ( Parser ):

    grammarFileName = "bezBoolow.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'v_'", "<INVALID>", "'('", "')'", "'{'", "'}'", "'+'", 
                     "'-'", "'*'", "'/'", "'>'", "'<'", "'='", "'=='", "'!='", 
                     "'\"'", "'^'", "'if'", "' &'", "'|'", "<INVALID>", 
                     "'while'", "';'", "'!'", "'print'", "'input'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "NUM", "FLOAT", "VARIABLE", 
                      "VAR_NAME", "ID_VAR", "LPAREN", "RPAREN", "LPARENCURLY", 
                      "RPARENCURLY", "PLUS", "MINUS", "TIMES", "DIV", "GT", 
                      "LT", "EQ", "EQ_LOGICAL", "NOT_EQ_LOGICAL", "QUOTATION", 
                      "POW", "IF", "AND", "OR", "WS", "WHILE", "ENDCHAR", 
                      "NOT", "PRINT", "INPUT", "FILENAME" ]

    RULE_file_ = 0
    RULE_blockseq = 1
    RULE_block = 2
    RULE_printBlock = 3
    RULE_printSeq = 4
    RULE_inputBlock = 5
    RULE_inputSeq = 6
    RULE_filename = 7
    RULE_variableDefinition = 8
    RULE_loopBlock = 9
    RULE_ifBlock = 10
    RULE_expression = 11
    RULE_equation = 12
    RULE_atom = 13

    ruleNames =  [ "file_", "blockseq", "block", "printBlock", "printSeq", 
                   "inputBlock", "inputSeq", "filename", "variableDefinition", 
                   "loopBlock", "ifBlock", "expression", "equation", "atom" ]

    EOF = Token.EOF
    T__0=1
    NUM=2
    FLOAT=3
    VARIABLE=4
    VAR_NAME=5
    ID_VAR=6
    LPAREN=7
    RPAREN=8
    LPARENCURLY=9
    RPARENCURLY=10
    PLUS=11
    MINUS=12
    TIMES=13
    DIV=14
    GT=15
    LT=16
    EQ=17
    EQ_LOGICAL=18
    NOT_EQ_LOGICAL=19
    QUOTATION=20
    POW=21
    IF=22
    AND=23
    OR=24
    WS=25
    WHILE=26
    ENDCHAR=27
    NOT=28
    PRINT=29
    INPUT=30
    FILENAME=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inputBlock(self):
            return self.getTypedRuleContext(bezBoolowParser.InputBlockContext,0)


        def blockseq(self):
            return self.getTypedRuleContext(bezBoolowParser.BlockseqContext,0)


        def EOF(self):
            return self.getToken(bezBoolowParser.EOF, 0)

        def getRuleIndex(self):
            return bezBoolowParser.RULE_file_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_" ):
                listener.enterFile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_" ):
                listener.exitFile_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_" ):
                return visitor.visitFile_(self)
            else:
                return visitor.visitChildren(self)




    def file_(self):

        localctx = bezBoolowParser.File_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.inputBlock()
            self.state = 29
            self.blockseq()
            self.state = 30
            self.match(bezBoolowParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockseqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bezBoolowParser.BlockContext)
            else:
                return self.getTypedRuleContext(bezBoolowParser.BlockContext,i)


        def getRuleIndex(self):
            return bezBoolowParser.RULE_blockseq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockseq" ):
                listener.enterBlockseq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockseq" ):
                listener.exitBlockseq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockseq" ):
                return visitor.visitBlockseq(self)
            else:
                return visitor.visitChildren(self)




    def blockseq(self):

        localctx = bezBoolowParser.BlockseqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_blockseq)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.block()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 1681915920) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDefinition(self):
            return self.getTypedRuleContext(bezBoolowParser.VariableDefinitionContext,0)


        def ifBlock(self):
            return self.getTypedRuleContext(bezBoolowParser.IfBlockContext,0)


        def loopBlock(self):
            return self.getTypedRuleContext(bezBoolowParser.LoopBlockContext,0)


        def printBlock(self):
            return self.getTypedRuleContext(bezBoolowParser.PrintBlockContext,0)


        def inputBlock(self):
            return self.getTypedRuleContext(bezBoolowParser.InputBlockContext,0)


        def getRuleIndex(self):
            return bezBoolowParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = bezBoolowParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        try:
            self.state = 42
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.variableDefinition()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.ifBlock()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.loopBlock()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 4)
                self.state = 40
                self.printBlock()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 5)
                self.state = 41
                self.inputBlock()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(bezBoolowParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(bezBoolowParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(bezBoolowParser.RPAREN, 0)

        def ENDCHAR(self):
            return self.getToken(bezBoolowParser.ENDCHAR, 0)

        def printSeq(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bezBoolowParser.PrintSeqContext)
            else:
                return self.getTypedRuleContext(bezBoolowParser.PrintSeqContext,i)


        def getRuleIndex(self):
            return bezBoolowParser.RULE_printBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintBlock" ):
                listener.enterPrintBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintBlock" ):
                listener.exitPrintBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintBlock" ):
                return visitor.visitPrintBlock(self)
            else:
                return visitor.visitChildren(self)




    def printBlock(self):

        localctx = bezBoolowParser.PrintBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(bezBoolowParser.PRINT)
            self.state = 45
            self.match(bezBoolowParser.LPAREN)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 28) != 0:
                self.state = 46
                self.printSeq()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(bezBoolowParser.RPAREN)
            self.state = 53
            self.match(bezBoolowParser.ENDCHAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintSeqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bezBoolowParser.AtomContext)
            else:
                return self.getTypedRuleContext(bezBoolowParser.AtomContext,i)


        def getRuleIndex(self):
            return bezBoolowParser.RULE_printSeq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintSeq" ):
                listener.enterPrintSeq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintSeq" ):
                listener.exitPrintSeq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintSeq" ):
                return visitor.visitPrintSeq(self)
            else:
                return visitor.visitChildren(self)




    def printSeq(self):

        localctx = bezBoolowParser.PrintSeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printSeq)
        self._la = 0 # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.atom()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.atom()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 57
                    self.match(bezBoolowParser.T__0)
                    self.state = 58
                    self.atom()
                    self.state = 63
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self, i:int=None):
            if i is None:
                return self.getTokens(bezBoolowParser.INPUT)
            else:
                return self.getToken(bezBoolowParser.INPUT, i)

        def EQ(self):
            return self.getToken(bezBoolowParser.EQ, 0)

        def LPAREN(self):
            return self.getToken(bezBoolowParser.LPAREN, 0)

        def inputSeq(self):
            return self.getTypedRuleContext(bezBoolowParser.InputSeqContext,0)


        def RPAREN(self):
            return self.getToken(bezBoolowParser.RPAREN, 0)

        def ENDCHAR(self):
            return self.getToken(bezBoolowParser.ENDCHAR, 0)

        def getRuleIndex(self):
            return bezBoolowParser.RULE_inputBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputBlock" ):
                listener.enterInputBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputBlock" ):
                listener.exitInputBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputBlock" ):
                return visitor.visitInputBlock(self)
            else:
                return visitor.visitChildren(self)




    def inputBlock(self):

        localctx = bezBoolowParser.InputBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_inputBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(bezBoolowParser.INPUT)
            self.state = 67
            self.match(bezBoolowParser.EQ)
            self.state = 68
            self.match(bezBoolowParser.INPUT)
            self.state = 69
            self.match(bezBoolowParser.LPAREN)
            self.state = 70
            self.inputSeq()
            self.state = 71
            self.match(bezBoolowParser.RPAREN)
            self.state = 72
            self.match(bezBoolowParser.ENDCHAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputSeqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filename(self):
            return self.getTypedRuleContext(bezBoolowParser.FilenameContext,0)


        def getRuleIndex(self):
            return bezBoolowParser.RULE_inputSeq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputSeq" ):
                listener.enterInputSeq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputSeq" ):
                listener.exitInputSeq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputSeq" ):
                return visitor.visitInputSeq(self)
            else:
                return visitor.visitChildren(self)




    def inputSeq(self):

        localctx = bezBoolowParser.InputSeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_inputSeq)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.filename()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTATION(self, i:int=None):
            if i is None:
                return self.getTokens(bezBoolowParser.QUOTATION)
            else:
                return self.getToken(bezBoolowParser.QUOTATION, i)

        def FILENAME(self):
            return self.getToken(bezBoolowParser.FILENAME, 0)

        def getRuleIndex(self):
            return bezBoolowParser.RULE_filename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilename" ):
                listener.enterFilename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilename" ):
                listener.exitFilename(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilename" ):
                return visitor.visitFilename(self)
            else:
                return visitor.visitChildren(self)




    def filename(self):

        localctx = bezBoolowParser.FilenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_filename)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(bezBoolowParser.QUOTATION)
            self.state = 77
            self.match(bezBoolowParser.FILENAME)
            self.state = 78
            self.match(bezBoolowParser.QUOTATION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(bezBoolowParser.VARIABLE, 0)

        def EQ(self):
            return self.getToken(bezBoolowParser.EQ, 0)

        def equation(self):
            return self.getTypedRuleContext(bezBoolowParser.EquationContext,0)


        def ENDCHAR(self):
            return self.getToken(bezBoolowParser.ENDCHAR, 0)

        def expression(self):
            return self.getTypedRuleContext(bezBoolowParser.ExpressionContext,0)


        def getRuleIndex(self):
            return bezBoolowParser.RULE_variableDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDefinition" ):
                listener.enterVariableDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDefinition" ):
                listener.exitVariableDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDefinition" ):
                return visitor.visitVariableDefinition(self)
            else:
                return visitor.visitChildren(self)




    def variableDefinition(self):

        localctx = bezBoolowParser.VariableDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variableDefinition)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(bezBoolowParser.VARIABLE)
                self.state = 81
                self.match(bezBoolowParser.EQ)
                self.state = 82
                self.equation(0)
                self.state = 83
                self.match(bezBoolowParser.ENDCHAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(bezBoolowParser.VARIABLE)
                self.state = 86
                self.match(bezBoolowParser.EQ)
                self.state = 87
                self.expression(0)
                self.state = 88
                self.match(bezBoolowParser.ENDCHAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(bezBoolowParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(bezBoolowParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(bezBoolowParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(bezBoolowParser.RPAREN, 0)

        def LPARENCURLY(self):
            return self.getToken(bezBoolowParser.LPARENCURLY, 0)

        def blockseq(self):
            return self.getTypedRuleContext(bezBoolowParser.BlockseqContext,0)


        def RPARENCURLY(self):
            return self.getToken(bezBoolowParser.RPARENCURLY, 0)

        def getRuleIndex(self):
            return bezBoolowParser.RULE_loopBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopBlock" ):
                listener.enterLoopBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopBlock" ):
                listener.exitLoopBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopBlock" ):
                return visitor.visitLoopBlock(self)
            else:
                return visitor.visitChildren(self)




    def loopBlock(self):

        localctx = bezBoolowParser.LoopBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_loopBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(bezBoolowParser.WHILE)
            self.state = 93
            self.match(bezBoolowParser.LPAREN)
            self.state = 94
            self.expression(0)
            self.state = 95
            self.match(bezBoolowParser.RPAREN)
            self.state = 96
            self.match(bezBoolowParser.LPARENCURLY)
            self.state = 97
            self.blockseq()
            self.state = 98
            self.match(bezBoolowParser.RPARENCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(bezBoolowParser.IF, 0)

        def LPAREN(self):
            return self.getToken(bezBoolowParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(bezBoolowParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(bezBoolowParser.RPAREN, 0)

        def LPARENCURLY(self):
            return self.getToken(bezBoolowParser.LPARENCURLY, 0)

        def blockseq(self):
            return self.getTypedRuleContext(bezBoolowParser.BlockseqContext,0)


        def RPARENCURLY(self):
            return self.getToken(bezBoolowParser.RPARENCURLY, 0)

        def getRuleIndex(self):
            return bezBoolowParser.RULE_ifBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlock" ):
                listener.enterIfBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlock" ):
                listener.exitIfBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBlock" ):
                return visitor.visitIfBlock(self)
            else:
                return visitor.visitChildren(self)




    def ifBlock(self):

        localctx = bezBoolowParser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(bezBoolowParser.IF)
            self.state = 101
            self.match(bezBoolowParser.LPAREN)
            self.state = 102
            self.expression(0)
            self.state = 103
            self.match(bezBoolowParser.RPAREN)
            self.state = 104
            self.match(bezBoolowParser.LPARENCURLY)
            self.state = 105
            self.blockseq()
            self.state = 106
            self.match(bezBoolowParser.RPARENCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(bezBoolowParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bezBoolowParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(bezBoolowParser.ExpressionContext,i)


        def RPAREN(self):
            return self.getToken(bezBoolowParser.RPAREN, 0)

        def NOT(self):
            return self.getToken(bezBoolowParser.NOT, 0)

        def equation(self):
            return self.getTypedRuleContext(bezBoolowParser.EquationContext,0)


        def OR(self):
            return self.getToken(bezBoolowParser.OR, 0)

        def AND(self):
            return self.getToken(bezBoolowParser.AND, 0)

        def GT(self):
            return self.getToken(bezBoolowParser.GT, 0)

        def LT(self):
            return self.getToken(bezBoolowParser.LT, 0)

        def EQ_LOGICAL(self):
            return self.getToken(bezBoolowParser.EQ_LOGICAL, 0)

        def NOT_EQ_LOGICAL(self):
            return self.getToken(bezBoolowParser.NOT_EQ_LOGICAL, 0)

        def getRuleIndex(self):
            return bezBoolowParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = bezBoolowParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 109
                self.match(bezBoolowParser.LPAREN)
                self.state = 110
                self.expression(0)
                self.state = 111
                self.match(bezBoolowParser.RPAREN)
                pass

            elif la_ == 2:
                self.state = 113
                self.match(bezBoolowParser.NOT)
                self.state = 114
                self.expression(2)
                pass

            elif la_ == 3:
                self.state = 115
                self.equation(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 127
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = bezBoolowParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 118
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 119
                        _la = self._input.LA(1)
                        if not(_la==23 or _la==24):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 120
                        self.expression(7)
                        pass

                    elif la_ == 2:
                        localctx = bezBoolowParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 121
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 122
                        _la = self._input.LA(1)
                        if not(_la==15 or _la==16):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 123
                        self.expression(6)
                        pass

                    elif la_ == 3:
                        localctx = bezBoolowParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 124
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 125
                        _la = self._input.LA(1)
                        if not(_la==18 or _la==19):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 126
                        self.expression(5)
                        pass

             
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class EquationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(bezBoolowParser.LPAREN, 0)

        def equation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bezBoolowParser.EquationContext)
            else:
                return self.getTypedRuleContext(bezBoolowParser.EquationContext,i)


        def RPAREN(self):
            return self.getToken(bezBoolowParser.RPAREN, 0)

        def atom(self):
            return self.getTypedRuleContext(bezBoolowParser.AtomContext,0)


        def MINUS(self):
            return self.getToken(bezBoolowParser.MINUS, 0)

        def TIMES(self):
            return self.getToken(bezBoolowParser.TIMES, 0)

        def DIV(self):
            return self.getToken(bezBoolowParser.DIV, 0)

        def PLUS(self):
            return self.getToken(bezBoolowParser.PLUS, 0)

        def getRuleIndex(self):
            return bezBoolowParser.RULE_equation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquation" ):
                listener.enterEquation(self)
